# devopsgpt

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  generate_logs.py  pyproject.toml  python generate_logs.py  settings.local.json
.github/workflows/: ci.yml
src/devopsgpt/: __init__.py  agent.py  cli.py  config.py  logging.py  models.py  prompts.py  service.py  tools.py
src/devopsgpt/api/: __init__.py  app.py  index.html
src/devopsgpt/integrations/: __init__.py  github.py  jira.py
src/devopsgpt/llm/: __init__.py  base.py  claude.py  factory.py  hosted.py  mock.py
src/devopsgpt/splunk/: __init__.py  auth.py  base.py  factory.py  mcp_client.py  mock_client.py  mock_data.py  normalization.py  rest_client.py
tests/: conftest.py  test_agent.py  test_api.py  test_config.py  test_integrations.py  test_llm.py  test_llm_providers.py  test_mcp_client.py  test_splunk.py  test_splunk_clients.py  test_tools.py
