[project]
name = "devopsgpt"
version = "0.1.0"
description = "DevOpsGPT — an autonomous engineering assistant that analyzes Splunk logs, traces, and deployments to find root causes, suggest fixes, and open Jira tickets and GitHub PRs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "DevOpsGPT Contributors" }]
keywords = ["splunk", "observability", "ai-agent", "mcp", "devops", "incident-response"]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    # Config & validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # HTTP client (Splunk REST, hosted models, Jira, GitHub)
    "httpx>=0.27",
    # LLM providers
    "anthropic>=0.40",
    "openai>=1.55",
    # Model Context Protocol client (Splunk MCP Server)
    "mcp>=1.1",
    # Structured logging
    "structlog>=24.4",
]

[project.optional-dependencies]
# Optional: official Splunk Python SDK as an alternative REST backend.
splunk-sdk = ["splunk-sdk>=2.0"]

dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",          # httpx mocking
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
devopsgpt = "devopsgpt.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/devopsgpt"
Repository = "https://github.com/your-org/devopsgpt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devopsgpt"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]
# E501: line length handled by formatter.
# UP042: `str, Enum` is intentional (explicit, JSON-friendly) over `StrEnum`.
ignore = ["E501", "UP042"]

[tool.ruff.lint.isort]
known-first-party = ["devopsgpt"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --cov=devopsgpt --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
